# computer-vision

./: .gitignore
01_start_opencv_gray_scaling/: CMakeLists.txt  main.cpp
02_cropping/: CMakeLists.txt  main.cpp
03_bitwise_operations_and_masking/: CMakeLists.txt  main.cpp
04_Drawing_and_annotating/: CMakeLists.txt  main.cpp
05_Arithmetic_Operations/: CMakeLists.txt  main.cpp
06_linear_brightness_and_contrast_adjustment/: CMakeLists.txt  main.cpp
07_Gamma_correction/: CMakeLists.txt  main.cpp
08_Mouse_event_with_highgui/: CMakeLists.txt  main.cpp
09_thresholding_image/: CMakeLists.txt  main.cpp
